--- a/public/styles/style10.css
+++ b/public/styles/style10.css
@@ -1,9 +1,15 @@
 /* members section1  */
 .wrap__members-section1 {
     width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  	display: -webkit-box;
+  	display: -ms-flexbox;
+  	display: flex;
+  	-webkit-box-pack: center;
+  	    -ms-flex-pack: center;
+  	        justify-content: center;
+  	-webkit-box-align: center;
+  	    -ms-flex-align: center;
+  	        align-items: center;
     background: #05060B;
     position: relative;
     overflow-x: hidden;
@@ -32,26 +38,42 @@
 }
 .members__section1-container {
     width: 1070px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 .members__container-block {
     width: 520px;
     height: 250px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     background: #111419;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
-    box-shadow: 3px 8px 13px #000000;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-box-shadow: 3px 8px 13px #000000;
+            box-shadow: 3px 8px 13px #000000;
     border-radius: 30px;
     cursor: pointer;
 }
 .members__container-block:hover {
   background: #F6DBA8;
-  box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+  -webkit-box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+          box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
   color: black;
 }
 .members__container-block:hover .members__container-paragraph {
@@ -63,7 +85,8 @@
 
 .members__special-block {
     background: #F6DBA8;
-    box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+    -webkit-box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
+            box-shadow: 0px 4px 90px 19px rgba(202, 162, 42, 0.85);
 }
 .members__container-title {
     font-family: 'WorkSans-Regular';
@@ -87,17 +110,28 @@
 }
 .members__container-btn {
     width: 586px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-left: 691.11px;
     margin-top: 50px;
 }
 .members__section1-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 273px;
     height: 53px;
     font-family: 'WorkSans-Regular';
