--- a/public/styles/style11.css
+++ b/public/styles/style11.css
@@ -1,9 +1,15 @@
 /* members section2  */
 .wrap__members-section2 {
     width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  	display: -webkit-box;
+  	display: -ms-flexbox;
+  	display: flex;
+  	-webkit-box-pack: center;
+  	    -ms-flex-pack: center;
+  	        justify-content: center;
+  	-webkit-box-align: center;
+  	    -ms-flex-align: center;
+  	        align-items: center;
     background: #111419;
 }
 .members__section2 {
@@ -30,8 +36,12 @@
     color: #FFFFFF;
 }
 .members__section2-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     margin-top: 30px;
 }
 .members__section2-img {
@@ -39,11 +49,18 @@
     height: 200px;
 }
 .members__section2-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 190px;
     height: 53px;
     font-family: 'WorkSans-Regular';
