--- a/public/styles/style12.css
+++ b/public/styles/style12.css
@@ -1,9 +1,15 @@
 /* members section3  */
 .wrap__members-section3 {
   width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
   background: #05060B;
   position: relative;
   overflow: hidden;
@@ -38,9 +44,15 @@
     margin-bottom: 30px;
 }
 .members__technologies-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 300px;
     height: 53px;
     font-family: 'WorkSans-Regular';
@@ -50,7 +62,8 @@
     line-height: 160%;
     color: #FFFFFF;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 .members__technologies-img {
     width: 735.53px;
@@ -76,13 +89,20 @@
     margin-bottom: 30px;
 }
 .members__report-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 190px;
     height: 53px;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     font-family: 'WorkSans-Regular';
     font-style: normal;
     font-weight: normal;
