--- a/public/styles/style3.css
+++ b/public/styles/style3.css
@@ -1,9 +1,15 @@
 /* MainSection2 */
 .wrap__main-section2 {
     width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
     background-color: #111419;
 }
 .main__section2 {
@@ -34,10 +40,17 @@
     width: 100%;
 }
 .section2__logo-list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
-    align-items: start;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 .section2__logo-list > li:nth-child(1) {
     margin-right: 130px;
