--- a/public/styles/style4.css
+++ b/public/styles/style4.css
@@ -84,14 +84,21 @@
     margin-top: 20px;
 }
 .events__button {
-    width: 100%;
-    height: 80px;
-    border: 2px solid #FFFFFF;
-    box-sizing: border-box;
-    padding: 20px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: start;
+  width: 100%;
+      height: 80px;
+      border: 2px solid #FFFFFF;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box;
+      padding: 20px 40px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: start;
+          -ms-flex-pack: start;
+              justify-content: start;
 }
 .event-paragraph {
     font-family: 'WorkSans-Regular';
