--- a/public/styles/style6.css
+++ b/public/styles/style6.css
@@ -1,10 +1,16 @@
 /* Association1 */
 .wrap__association1 {
-    width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-    background-color: rgba(5, 6, 11, 1);
+      width: 100%;
+    	display: -webkit-box;
+    	display: -ms-flexbox;
+    	display: flex;
+    	-webkit-box-pack: center;
+    	    -ms-flex-pack: center;
+    	        justify-content: center;
+    	-webkit-box-align: center;
+    	    -ms-flex-align: center;
+    	        align-items: center;
+      background-color: rgba(5, 6, 11, 1);
 }
 .association1 {
     width: 1290px;
@@ -40,8 +46,12 @@
     z-index: 1000;
 }
 .association1__about-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     position: relative;
     z-index: 1000;
 }
@@ -69,16 +79,24 @@
     height: 421px;
     background: #111419;
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-bottom: 49px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: end;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
     padding-bottom: 51px;
 }
 .association1__about-btn {
     border: 1.5px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 380px;
     height: 50px;
     font-family: "WorkSans-Regular";
@@ -87,9 +105,15 @@
     font-size: 20px;
     line-height: 23px;
     color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .about-br2 {
     display: none;
