--- a/public/styles/style7.css
+++ b/public/styles/style7.css
@@ -1,17 +1,29 @@
 /* Association2 */
 .wrap__association2 {
     width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  	display: -webkit-box;
+  	display: -ms-flexbox;
+  	display: flex;
+  	-webkit-box-pack: center;
+  	    -ms-flex-pack: center;
+  	        justify-content: center;
+  	-webkit-box-align: center;
+  	    -ms-flex-align: center;
+  	        align-items: center;
     background-color: #111419;
 }
 .association2 {
     width: 1290px;
     height: 446.14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     position: relative;
     overflow: hidden;
 }
@@ -39,7 +51,8 @@
 }
 .association2__sponsorships-btn {
     border: 2px solid #F6DBA8;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     width: 273px;
     height: 53px;
     font-family: "WorkSans-Regular";
@@ -48,9 +61,15 @@
     font-size: 20px;
     line-height: 160%;
     color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .association2__sponsorships-img {
     position: absolute;
