--- a/public/styles/style9.css
+++ b/public/styles/style9.css
@@ -1,8 +1,14 @@
 .wrap__event-section {
     width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  	display: -webkit-box;
+  	display: -ms-flexbox;
+  	display: flex;
+  	-webkit-box-pack: center;
+  	    -ms-flex-pack: center;
+  	        justify-content: center;
+  	-webkit-box-align: center;
+  	    -ms-flex-align: center;
+  	        align-items: center;
     background: #05060B;
 }
 .event__container {
@@ -45,9 +51,15 @@
 }
 .event__title-container {
     width: 710.05px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    align-items: end;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
     margin-bottom: 37.63px;
 }
 .event__section2-title {
@@ -66,7 +78,8 @@
     font-weight: normal;
     font-size: 30px;
     line-height: 35px;
-    text-decoration-line: underline;
+    -webkit-text-decoration-line: underline;
+            text-decoration-line: underline;
     color: #FFFFFF;
     margin-top: 13px;
     margin-bottom: 5px;
