--- a/public/styles/style15.css
+++ b/public/styles/style15.css
@@ -98,6 +98,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  width: 952px;
 }
 
 .concept-download {
@@ -217,4 +218,8 @@
   position: relative;
   left: 280px;
   bottom: 40px;
+}
+
+.dekstop {
+  display: none;
 }
