--- a/public/main.css
+++ b/public/main.css
@@ -4139,7 +4139,8 @@ body {
     top: -80px;
     right: 0;
     width: 100%;
-    display: grid;
+    display: flex;
+    justify-content: center;
 }
 .lead__image {
     width: 100%;
@@ -4292,6 +4293,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
+  width: 952px;
 }
 
 .concept-download {
@@ -4412,6 +4414,10 @@ body {
   left: 280px;
   bottom: 40px;
 }
+
+.dekstop {
+  display: none;
+}
 .strategic {
   padding-left: 30px;
   padding-right: 30px;
@@ -4507,5 +4513,235 @@ body {
 
 .arrow-button__strategic:hover {
   color: #05060b;
+}
+
+@media (min-width: 992px) and (max-width: 1320px) {
+
+  .lead__container {
+    margin-bottom: -56px;
+  }
+
+  .lead__logo {
+    width: 70px;
+    height: 60px;
+  }
+
+  .lead__logo-description {
+    font-size: 17px;
+    text-align: center;
+    font-family: "WorkSans-Bold";
+    text-align: center;
+  }
+
+  .description__title {
+    font-size: 112px;
+    width: 952px;
+    line-height: 195px;
+    margin: 0 auto;
+  }
+
+  .description__paragraph {
+    width: 410px;
+    height: 70px;
+    margin-bottom: 0;
+  }
+
+  .description__paragraph:last-of-type {
+    margin: 0 auto 110px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1320px) {
+  .concept__title {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    line-height: 47px;
+  }
+
+  .concept__wrapper {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+
+  .join-us__header {
+    display: flex;
+    justify-content: center;
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .join-us__descr {
+    font-size: 18px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .join-us__btn {
+    font-size: 18px;
+    margin: 0 auto;
+    margin-top: 10px;
+    display: block;
+  }
+
+  .Card-wrapper {
+    gap: 20px;
+    margin: 0 auto;
+    margin-top: 37px;
+    
+  }
+
+  .davosCard__img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+
+  .davosCard {
+    display: flex;
+    width: 466px;
+    height: 227px;
+  }
+
+  .concept-download {
+    width: 410px;
+    height: 50px;
+    margin-top: 20px;
+  }
+
+  .partners__title {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    font-size: 40px;
+  }
+
+  .partners__descr {
+    height: 116px;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 35px;
+  }
+
+  .partners__supported,
+  .partners__logos {
+    display: none;
+  }
+
+  .partners__wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  .dekstop {
+    display: block;
+  }
+
+  .dekstop__logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .supportersOffice {
+    width: 130.6px;
+    height: 140.9px;
+  }
+
+  .supported-descr {
+    width: 324.61px;
+    height: 78.47px;
+    font-size: 18px;
+    margin-right: 160px;
+  }
+
+  .supportersCypro {
+    width: 330.85px;
+    height: 63.78px;
+  }
+
+  .supportersIdaxa {
+    width: 190.76px;
+    height: 52.88px;
+    font-size: 18px;
+  }
+
+  .supportersUni {
+    width: 346.74px;
+    height: 73.14px;
+  }
+
+  .supportersWorld {
+    width: 146.46px;
+    height: 124.47px;
+  }
+
+  .supportersForum {
+    width: 185.06px;
+    height: 114.29px;
+  }
+
+  .supportersIe {
+    width: 188.24px;
+    height: 55.4px;
+  }
+
+  .supportersBank {
+    width: 413.94px;
+    height: 82.09px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1320px) {
+  .strategic__title {
+    display: block;
+    margin: 0 auto;
+    width: 426px;
+    height: 47px;
+    font-size: 40px;
+    line-height: 47px;
+    margin-top: 129px;
+    margin-bottom: 12px;
+  }
+
+  .strategic__text {
+    display: block;
+    margin: 0 auto;
+    width: 365px;
+    height: 58px;
+    font-size: 18px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .startegic__logo {
+    display: block;
+    margin: 0 auto;
+    width: 313.24px;
+    height: 66px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+
+  .strategic__contact {
+    width: 530px;
+    height: 131px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 18px;
+  }
+
+  .strategic__contact-name {
+      margin: 0;
+  }
+
+  .strategic-donwload__text {
+      font-size: 18px;
+      margin: 0 auto;
+  }
+
 }
 
