--- a/public/styles/style14.css
+++ b/public/styles/style14.css
@@ -13,7 +13,8 @@ body {
     top: -80px;
     right: 0;
     width: 100%;
-    display: grid;
+    display: flex;
+    justify-content: center;
 }
 .lead__image {
     width: 100%;
