--- a/public/main.css
+++ b/public/main.css
@@ -4585,6 +4585,7 @@ body {
     display: block;
   }
 
+
   .Card-wrapper {
     gap: 20px;
     margin: 0 auto;
@@ -4636,6 +4637,11 @@ body {
 
   .dekstop {
     display: block;
+  }
+
+  .dekstop__wrapper {
+    width: 952px;
+    margin: 0 auto;
   }
 
   .dekstop__logo {
