--- a/public/styles/tablet10.css
+++ b/public/styles/tablet10.css
@@ -109,7 +109,7 @@
   }
 
   .dekstop__wrapper {
-    width: 100%;
+    width: 516px;
     margin: 0 auto;
   }
 
@@ -200,5 +200,10 @@
   .davosCard__date {
     bottom: 24px;
     left: 26px;
+  }
+
+  .dekstop__wrapper {
+    width: 614px;
+    margin: 0 auto;
   }
 }
