--- a/public/styles/tablet10.css
+++ b/public/styles/tablet10.css
@@ -109,7 +109,7 @@
   }
 
   .dekstop__wrapper {
-    width: 516px;
+    width: 532px;
     margin: 0 auto;
   }
 
@@ -137,6 +137,7 @@
     width: 224.61px;
     height: 78.47px;
     font-size: 16px;
+    margin-bottom: 20px;
   }
 
   .supportersCypro {
@@ -203,7 +204,7 @@
   }
 
   .dekstop__wrapper {
-    width: 614px;
+    width: 725px;
     margin: 0 auto;
   }
 }
