--- a/public/main.css
+++ b/public/main.css
@@ -4901,7 +4901,7 @@ body {
   }
 
   .dekstop__wrapper {
-    width: 516px;
+    width: 532px;
     margin: 0 auto;
   }
 
@@ -4929,6 +4929,7 @@ body {
     width: 224.61px;
     height: 78.47px;
     font-size: 16px;
+    margin-bottom: 20px;
   }
 
   .supportersCypro {
@@ -4995,7 +4996,7 @@ body {
   }
 
   .dekstop__wrapper {
-    width: 614px;
+    width: 725px;
     margin: 0 auto;
   }
 }
