--- a/public/main.css
+++ b/public/main.css
@@ -4139,8 +4139,8 @@ body {
     top: -80px;
     right: 0;
     width: 100%;
-    display: grid;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
 }
 .lead__image {
     width: 100%;
