--- a/public/styles/dekstop1.css
+++ b/public/styles/dekstop1.css
@@ -1,5 +1,9 @@
 @media (min-width: 992px) and (max-width: 1320px) {
 
+  .wrap__sections {
+    max-width: 952px;
+  }
+
   .lead__container {
     margin-bottom: -56px;
   }
