--- a/public/styles/style14.css
+++ b/public/styles/style14.css
@@ -28,7 +28,6 @@ body {
     position: absolute;
     bottom: 0;
     width: 250px;
-    margin: 0 auto;
     z-index: 3;
 }
 .lead__logo-description {
@@ -40,8 +39,8 @@ body {
     margin: 13px 0;
     text-align: center;
 }
-.wrap__section {
-    width: 1290px;
+.wrap__sections {
+    width: 100%;
     margin: 0 auto;
 }
 .description__title {
