--- a/public/styles/tablet4.css
+++ b/public/styles/tablet4.css
@@ -85,7 +85,7 @@
         font-size: 18px;
     }
     .association2__sponsorships-img {
-        width: 354px;
+        left: 209px;
         height: 353px;
     }
     .association3 {
