--- a/public/styles/dekstop2.css
+++ b/public/styles/dekstop2.css
@@ -37,7 +37,7 @@
     gap: 20px;
     margin: 0 auto;
     margin-top: 37px;
-    
+
   }
 
   .davosCard__img {
@@ -96,19 +96,29 @@
     justify-content: space-between;
     align-items: center;
   }
-
+  .newPartnersForTablet {
+    display: none;
+  }
   .supportersOffice {
+    position: relative;
+    top: 36px;
     width: 130.6px;
     height: 140.9px;
   }
 
   .supported-descr {
+    margin-left: 131px;
+    margin-top: -58px;
     width: 324.61px;
     height: 78.47px;
     font-size: 18px;
     margin-right: 160px;
   }
 
+  .supportersCypro {
+    position: relative;
+    top: 38px;
+  }
   .supportersCypro {
     width: 330.85px;
     height: 63.78px;
