--- a/public/styles/phone3.css
+++ b/public/styles/phone3.css
@@ -74,7 +74,7 @@
         font-size: 18px;
     }
     .association2__sponsorships-img {
-        display: none;
+        left: 177px;
     }
     .association3 {
         height: 961px;
