--- a/public/styles/style15.css
+++ b/public/styles/style15.css
@@ -104,7 +104,9 @@
 
 .concept-download {
   display: block;
-  width: 410px;
+  position: relative;
+  width: 410px !important;
+  left: 10px;
   height: 50px;
   margin: 100px auto;
   width: 364px;
@@ -124,21 +126,31 @@
 }
 
 .concept-donwload__text {
-  margin-right: 10px;
+  margin-right: 21px;
   font-family: 'WorkSans-Regular';
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 160%;
   color: #ffff;
+  left: -26px;
 }
-
-.concept-donwload__text:hover {
+.arrow-button3 {
+  position: relative;
+  left: -20px;
+  opacity: 0;
+}
+.concept-download:hover .concept-donwload__text {
   color: #05060B;
 }
-
+.concept-download:hover .arrow-button3 {
+  opacity: 1 !important;
+}
+.concept-download:hover .arrow-button {
+  opacity: 0;
+}
 .arrow-button {
-  margin-left: 10px;
+  margin-left: 25px;
   margin-top: 8px;
   width: 15px;
   height: 15px;
@@ -205,7 +217,7 @@
   grid-column: span 3;
 }
 
-.supporters-2 { 
+.supporters-2 {
   grid-column: span 4;
 }
 
