--- a/public/styles/style2.css
+++ b/public/styles/style2.css
@@ -50,7 +50,7 @@
     margin-top: 393px;
 }
 .section1__title {
-    font-family: "WorkSans-Bold";
+    font-family: 'WorkSans-Bold', Verdana, sans-serif;
     font-style: normal;
     font-weight: 800;
     font-size: 50px;
@@ -59,7 +59,7 @@
     margin-bottom: 10px;
 }
 .section1__paragraph {
-    font-family: "WorkSans-Regular";
+    font-family: 'WorkSans-Regular', Verdana, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
@@ -68,7 +68,7 @@
 }
 .section1__link, .section1__link:visited {
     margin-top: 16.6px;
-    font-family: "WorkSans-Regular";
+    font-family: 'WorkSans-Regular', Verdana, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
@@ -83,7 +83,7 @@
     width: 414px;
 }
 .section1__img-title {
-    font-family: "WorkSans-Regular";
+    font-family: 'WorkSans-Regular', Verdana, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
