--- a/public/styles/style4.css
+++ b/public/styles/style4.css
@@ -11,7 +11,7 @@
     width: 1290px;
 }
 .section3-title {
-    font-family: 'WorkSans-Bold';
+    font-family: 'WorkSans-Bold', Verdana, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 45px;
@@ -70,7 +70,7 @@
     margin-bottom: 38px;
 }
 .events__title-link, .events__title-link:visited {
-    font-family: 'WorkSans-Regular';
+    font-family: 'WorkSans-Regular', Verdana, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 30px;
@@ -101,7 +101,7 @@
               justify-content: start;
 }
 .event-paragraph {
-    font-family: 'WorkSans-Regular';
+    font-family: 'WorkSans-Regular', Verdana, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
