--- a/public/styles/tablet9.css
+++ b/public/styles/tablet9.css
@@ -4,7 +4,9 @@
   .wrap__sections {
     max-width: 726px;
   }
-
+  .arrow-button__strategic2 {
+    left: -24px;
+  }
   .header__burger {
     width: 22px;
     height: 18px;
