--- a/public/styles/tablet10.css
+++ b/public/styles/tablet10.css
@@ -141,7 +141,9 @@
   }
 
   .supported-descr {
-    width: 224.61px;
+    width: 308px;
+    position: relative;
+    top: 18px;
     height: 78.47px;
     font-size: 16px;
     margin-bottom: 20px;
