--- a/public/main.css
+++ b/public/main.css
@@ -271,6 +271,7 @@ body {
     width: 1290px;
     height: 570px;
 }
+
 .section2-title {
     margin-top: 60px;
     margin-bottom: 10px;
@@ -506,7 +507,9 @@ body {
     margin-bottom: 46px;
 }
 .footer__list4 {
-    margin-left: 405px;
+    margin-left: 367px;
+    position: relative;
+    top: -41px;
 }
 #social_networks {
   width: 70px;
@@ -740,7 +743,7 @@ body {
         margin-bottom: 0;
     }
     .footer__list4 {
-        margin-left: 216px;
+        margin-left: 181px;
     }
 }
 @media (min-width: 1345px) and (max-width: 1960px) {
@@ -1061,7 +1064,7 @@ body {
         margin-bottom: 20px;
     }
     .footer__list4 {
-        margin-left: 145px;
+        margin-left: 102px;
     }
 }
 @media (max-width: 1290px) {
@@ -1817,6 +1820,19 @@ body {
     	    -ms-flex-align: center;
     	        align-items: center;
       background-color: rgba(5, 6, 11, 1);
+}
+.footer__item2 {
+    width: 86px;
+}
+.footer__item4 {
+  width: 60px;
+}
+#login_foot {
+  opacity: 0;
+  z-index: -1;
+}
+.news_hide {
+  display: none;
 }
 .association1 {
     width: 1290px;
